# video

./: .gitignore  Makefile  README.md  airport_trailer_script.md  assemble_airport_trailer.py  assemble_chimp_trailer.py  assemble_dalek_trailer.py  assemble_dinner_party_trailer.py  assemble_everyday_video.py  assemble_metro_trailer.py  assemble_sloppy_trailer.py  assemble_souffle_trailer.py  assemble_toilet_trailer.py  assemble_video.c  assemble_video.zig  brain.md  bundle_all.sh  bundle_cpp.sh  bundle_linux.sh  check_pipeline.py  chimp_trailer_script.md  compare_headers.v  compare_models.v  complete_variants_generator.py  concat_list.txt  concat_list_star.txt  convert_to_safetensors.py  dinner_party_script.md  everyday_trailer_variants.py  flux2remotetextencoder.py  gen_ref.c  generate_64_scene_variants.py  generate_airport_assets.py  generate_chimp_assets.py  generate_dalek_assets.py  generate_dinner_party_assets.py  generate_everyday_assets.py  generate_film_music.py  generate_gollum_assets.py  generate_horror_assets.py  (+29 more)
generations/: audio_prompts.txt  make_stills.py  regenerate_eleven_and_build_video.py
rust_asset_generator/: Cargo.toml  README.md  download_gguf.py  export_models.py  flux_model.pt  methods.md  python_driver.py  test_tiny_sd.py
rust_asset_generator/assets/: scenes_gollum.json  scenes_horror.json
rust_asset_generator/src/: data.rs  ffmpeg.rs  inference.rs  lib.rs
scripts/: print_audio_prompts.py
star/: run.py  zombie.py
temp_segments_deeper/: segments.txt
temp_segments_regen/: segments.txt
tools/: test_vibevoice.py
vidlib/: README.md  (+10 more)
