[package]
name = "rust_asset_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.8.2"
candle-transformers = "0.8.2"
candle-nn = "0.8.2"
hf-hub = "0.3"
tokenizers = "0.21"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
rayon = "1.10"
image = "0.25"

